// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: Person.proto

package com.hx.proto;

public interface MyRequestOrBuilder extends
    // @@protoc_insertion_point(interface_extends:com.hx.proto.MyRequest)
    com.google.protobuf.MessageOrBuilder {

  /**
   * <code>string username = 1;</code>
   * @return The username.
   */
  java.lang.String getUsername();
  /**
   * <code>string username = 1;</code>
   * @return The bytes for username.
   */
  com.google.protobuf.ByteString
      getUsernameBytes();
}
