// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: Person.proto

package com.hx.proto;

public interface MyResponseOrBuilder extends
    // @@protoc_insertion_point(interface_extends:com.hx.proto.MyResponse)
    com.google.protobuf.MessageOrBuilder {

  /**
   * <code>string realname = 2;</code>
   * @return The realname.
   */
  java.lang.String getRealname();
  /**
   * <code>string realname = 2;</code>
   * @return The bytes for realname.
   */
  com.google.protobuf.ByteString
      getRealnameBytes();
}
